--- a/package.json
+++ b/package.json
@@ -9,10 +9,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.18",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.3",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.4.0",
+    "eas-cli": "^3.14.0",
+    "expo": "^48.0.19",
+    "expo-constants": "~14.2.1",
+    "expo-image-manipulator": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
+    "firebase": "^9.22.2",
+    "luxon": "^3.3.0",
+    "moment-timezone": "^0.5.43",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-dialog": "^9.3.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-image-resizer": "^1.4.5",
+    "react-native-paper": "^5.8.0",
+    "react-native-popup-menu": "^0.16.1",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-toastify": "^9.1.3",
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
