--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "update": "^0.7.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-plugin-inline-dotenv": "^1.7.0"
   },
   "private": true
 }
