--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-calendars": "^1.1300.0",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-dialog": "^9.3.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
