--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
     "eas-cli": "^3.14.0",
-    "expo": "^48.0.19",
+    "expo": "50.0.3",
     "expo-constants": "~14.2.1",
     "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
