--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.8",
     "firebase": "^9.22.2",
+    "lottie-react-native": "^6.6.0",
     "luxon": "^3.3.0",
     "moment-timezone": "^0.5.43",
     "react": "18.2.0",
