--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "npx expo start",
+    "android": "npx expo run:android",
+    "ios": "npx expo run:ios",
+    "web": "npx expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
@@ -22,13 +22,13 @@
     "expo-image-picker": "~14.7.1",
     "expo-location": "~16.5.2",
     "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.8",
+    "expo-updates": "^0.24.10",
     "firebase": "^9.22.2",
-    "lottie-react-native": "^6.6.0",
+    "lottie-react-native": "^6.5.1",
     "luxon": "^3.3.0",
     "moment-timezone": "^0.5.43",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "^0.73.4",
     "react-native-calendars": "^1.1300.0",
     "react-native-countdown-component": "^2.7.1",
     "react-native-dialog": "^9.3.0",
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/cli": "^0.17.5",
     "babel-plugin-inline-dotenv": "^1.7.0"
   },
   "private": true
