--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
-    "eas-cli": "^3.14.0",
+    "eas": "^0.1.0",
+    "eas-cli": "^3.18.3",
     "expo": "^50.0.0",
     "expo-constants": "~15.4.5",
     "expo-image-manipulator": "~11.8.0",
@@ -30,6 +31,7 @@
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-calendars": "^1.1300.0",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-countdown-component": "^2.7.1",
     "react-native-deck-swiper": "^2.0.15",
     "react-native-dialog": "^9.3.0",
