--- a/package.json
+++ b/package.json
@@ -9,39 +9,39 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
     "eas-cli": "^3.14.0",
-    "expo": "^50.0.0",
-    "expo-constants": "~15.4.5",
-    "expo-image-manipulator": "~11.8.0",
-    "expo-image-picker": "~14.7.1",
-    "expo-location": "~16.5.2",
-    "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.8",
+    "expo": "^52.0.21",
+    "expo-constants": "^17.0.3",
+    "expo-image-manipulator": "^13.0.5",
+    "expo-image-picker": "^16.0.3",
+    "expo-location": "^18.0.4",
+    "expo-status-bar": "^2.0.0",
+    "expo-updates": "^0.26.10",
     "firebase": "^9.22.2",
-    "lottie-react-native": "^6.6.0",
+    "lottie-react-native": "^7.1.0",
     "luxon": "^3.3.0",
     "moment-timezone": "^0.5.43",
-    "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react": "^18.3.1",
+    "react-native": "^0.76.5",
     "react-native-calendars": "^1.1300.0",
     "react-native-countdown-component": "^2.7.1",
     "react-native-deck-swiper": "^2.0.15",
     "react-native-dialog": "^9.3.0",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-image-resizer": "^1.4.5",
     "react-native-paper": "^5.9.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-popup-menu": "^0.16.1",
-    "react-native-reanimated": "~3.6.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^4.1.0",
     "react-native-simple-dialogs": "^2.0.1",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
